[gd_scene load_steps=11 format=3 uid="uid://c8b00seg1kw7x"]

[ext_resource type="Script" uid="uid://i48ae2p7id5y" path="res://player.gd" id="1_6nbh1"]
[ext_resource type="Script" uid="uid://cfhlcaae8v74w" path="res://player_grab.gd" id="2_halkx"]
[ext_resource type="Script" uid="uid://byn6detgmtgij" path="res://inventory/player_inventory.gd" id="3_6nbh1"]
[ext_resource type="PackedScene" uid="uid://cb03d1o62chyj" path="res://hud.tscn" id="3_va7e3"]
[ext_resource type="Resource" uid="uid://d12in20nxy227" path="res://inventory/resources/test_inventory.tres" id="4_halkx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_876be"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xmas2"]
height = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_ehpa4"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1hgir"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1hgir"]

[node name="PlayerController" type="CharacterBody3D"]
script = ExtResource("1_6nbh1")

[node name="player_grab" type="Node" parent="."]
script = ExtResource("2_halkx")

[node name="player_inventory" type="Node" parent="."]
script = ExtResource("3_6nbh1")
inventory_data = ExtResource("4_halkx")

[node name="standing_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_876be")

[node name="crouch_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_xmas2")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)

[node name="Hold" type="Node3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="HUD" parent="head" instance=ExtResource("3_va7e3")]

[node name="Camera3D" type="Camera3D" parent="head"]

[node name="interaction_raycast" type="ShapeCast3D" parent="head"]
shape = SubResource("SphereShape3D_ehpa4")
target_position = Vector3(0, 0, -2)
collision_mask = 6

[node name="uncrouch_raycast" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
physics_interpolation_mode = 1
replication_config = SubResource("SceneReplicationConfig_1hgir")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_1hgir")
